--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>
-            My Website
+        <h1 class="headtxt">
+            個人履歷
         </h1>
     </header>
     <nav>
@@ -28,30 +28,77 @@
                 <h2>優缺點：活潑外向，缺點是很懶</h2>
                 <h2>個人特質：熱枕與活力富有好奇心</h2>
                 <h2>興趣：看動漫，打球</h2>
-                <h2>個人名言：他今天不點名</h2>
+                <div class="slo">個人名言：他今天不點名</div>
+                   
             </div>
         </section>
         <section id="專業技能" class="card">
             <h1>專業技能</h1>
-            <div class="inf">
-                <h3>css</h3>
-                <progress max="100" value="70"></progress>
-                <h3>html</h3>
-                <progress max="100" value="50"></progress>
-                <h3>c++</h3>
-                <progress max="100" value="100"></progress>
-                <h3>c#</h3>
-                <progress max="100" value="20"></progress>
-                <h3>python</h3>
-                <progress max="100" value="30"></progress>
+            <br>
+            <div>
+                 HTML 50%
+                <div class="inf">
+                </div>
             </div>
-
+            <div>
+                JAVA 20%
+                <div class="inf">
+                    <div class="inf20"></div>
+                </div>
+            </div>
+            <div>
+                C++ 50%
+                <div class="inf">
+                    <div class="inf50"></div>
+                </div>
+            </div>
+            <div>
+                CSS 50%
+                <div class="inf">
+                </div>
+            </div>
+            <div>
+                Python 100%
+                <div class="inf">
+                    <div class="inf100"></div>
+                </div>
+            </div>
         </section>
         <section id="個人經歷" class="card">
-
+            <h1>個人經歷</h1>
+            <div>
+                <img class="hkpho" src="Img/HK.png" alt="HK">
+                <h2>
+                    在香港實習
+                </h2>
+            </div>
+            <div>
+                <img class="hkpho" src="Img/MC.png" alt="MC">
+                <h2>
+                    大陸廣州的一間公司實習
+                </h2>
+            </div>
+            <div>
+                <img class="hkpho" src="Img/MD.png" alt="MD">
+                <h2>
+                    緬甸仰光的工作實習
+                </h2>
+            </div>
         </section>
-        <section id="聯絡資訊" class="card">
 
+        <section id="聯絡資訊" class="card">
+            <h1>聯絡資訊</h1>
+            <div class="con">
+                <a href="https://www.instagram.com/syc.0624/?hl=zh-tw" target="_blank">
+                    <img class="ig" src="Img/ins.png" alt="instergram">
+                </a>
+                <a href="https://www.facebook.com/profile.php?id=100013462267800" target="_blank">
+                    <img  class="ig" src="Img/fb.png" alt="facebook">
+                </a>
+                <a href="mailto:jason462320214@gmail.com" target="_blank">
+                    <img class="ig" src="Img/mail.png" alt="gmail">
+                </a>
+            </div>
         </section>
     </main>
     <footer>
