第三次推送

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1 class="headtxt">
-            個人履歷
+            My Website
         </h1>
     </header>
     <nav>
@@ -29,15 +29,15 @@
                 <h2>個人特質：熱枕與活力富有好奇心</h2>
                 <h2>興趣：看動漫，打球</h2>
                 <div class="slo">個人名言：他今天不點名</div>
-                   
             </div>
         </section>
         <section id="專業技能" class="card">
             <h1>專業技能</h1>
             <br>
             <div>
-                 HTML 50%
+                 HTML 30%
                 <div class="inf">
+                    <div class="inf30"></div>
                 </div>
             </div>
             <div>
@@ -55,6 +55,7 @@
             <div>
                 CSS 50%
                 <div class="inf">
+                    <div class="inf20"></div>
                 </div>
             </div>
             <div>
@@ -66,23 +67,48 @@
         </section>
         <section id="個人經歷" class="card">
             <h1>個人經歷</h1>
-            <div>
-                <img class="hkpho" src="Img/HK.png" alt="HK">
-                <h2>
-                    在香港實習
-                </h2>
+            <div  class="hkpho">
+                <img src="Img/HK.png" alt="HK" width="20%">
+                <p>
+                    <strong>參加香港的珠寶展覽</strong><br>
+                    <br>
+                    參與香港的珠寶展覽，令我留下深刻印象。<br>
+                    展覽匯聚了來自世界各地的優秀珠寶設計師及品牌，<br>
+                    展示了令人驚艷的精湛工藝與創新設計。<br>
+                    透過細緻品味，我深深感受到每一件珠寶背後蘊含的匠心獨具，<br>
+                    彷彿每顆寶石都講述著獨特的故事。<br>
+                    展會更提供了與業界專業人士交流的寶貴機會，拓展了我的珠寶視野。<br>
+                    此次參展經歷讓我更加珍視珠寶藝術的美與奢華，<br>
+                    為這個充滿光彩的行業深深著迷。<br>
+                </p>
             </div>
-            <div>
-                <img class="hkpho" src="Img/MC.png" alt="MC">
-                <h2>
-                    大陸廣州的一間公司實習
-                </h2>
+            <div class="hkpho">
+                <img src="Img/MC.png" alt="MC" width="20%">
+                <p>
+                    <strong>大陸廣州的一間公司實習</strong><br>
+                    <br>
+                    在廣州實習的經驗讓我獲益良多。<br>
+                    公司環境充滿活力，同事們友善合作，使我融入團隊的過程更加順暢。<br>
+                    透過實際工作，我深入了解了中國商業文化，提升了跨文化溝通的能力。<br>
+                    同時，我在專業領域中獲得寶貴經驗，學到了實際應用的技能。<br>
+                    這段時光不僅讓我在事業上更具自信，也拓寬了我的人生視野，<br>
+                    感受到了中國經濟發展的動能。<br>
+                    這段經歷讓我對未來更有信心。<br>
+                </p>
             </div>
-            <div>
-                <img class="hkpho" src="Img/MD.png" alt="MD">
-                <h2>
-                    緬甸仰光的工作實習
-                </h2>
+            <div class="hkpho">
+                <img  src="Img/MD.png" alt="MD" width="20%">
+                <p>
+                    <strong>緬甸仰光的工作實習</strong><br>
+                    <br>
+                    在仰光的實習體驗令我留下難以忘懷的印象。<br>
+                    緬甸的獨特文化和友好的工作環境使我深刻體會到國際化的職場氛圍。<br>
+                    透過與當地同事的互動，我更深入了解當地的商業慣例和價值觀，<br>
+                    豐富了我的跨文化交流技能。<br>
+                    實習期間，我有機會參與各種專業任務，提升了實務經驗。<br>
+                    這段時光不僅豐富了我的履歷，<br>
+                    更讓我對緬甸的社會與經濟發展有了更深的認識。<br>
+                </p>
             </div>
         </section>
 
